[package]
name = "hasskey"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

clap = { version = "4.5", features = ["derive"] }

serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"

evdev = { version = "0.12", features = ["tokio", "serde"] }

reqwest = { version = "0.12", features = ["json"] }

url = { version = "2.5", features = ["serde"] }



